--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:m5stack-core-esp32]
+
+[env:M5Atom]
 platform = espressif32
-board = m5stack-core-esp32
+board = pico32
+upload_speed = 115200
 framework = arduino
+lib_deps = https://github.com/m5stack/M5Atom.git
+            https://github.com/FastLED/FastLED.git
+        Wire
