--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 [env:M5Atom]
 platform = espressif32
 board = pico32
-upload_speed = 115200
+upload_speed = 1500000
 framework = arduino
 lib_deps = https://github.com/m5stack/M5Atom.git
             https://github.com/FastLED/FastLED.git
