--- a/platformio.ini
+++ b/platformio.ini
@@ -11,9 +11,10 @@
 
 [env:M5Atom]
 platform = espressif32
-board = pico32
-upload_speed = 1500000
+board = mhetesp32devkit
+upload_speed = 921600
 framework = arduino
-lib_deps = https://github.com/m5stack/M5Atom.git
-            https://github.com/FastLED/FastLED.git
+lib_deps = ;https://github.com/m5stack/M5Atom.git
+            ;https://github.com/FastLED/FastLED.git
         Wire
+        https://github.com/adafruit/Adafruit_BNO055.git
